--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 
 LABEL \
-    maintainer="Morgan Auchede <morgan.auchede@gmail.com>"
+    maintainer="Morgan AUCHEDE <morgan.auchede@gmail.com>"
 
 ENV \
     S6_BEHAVIOUR_IF_STAGE2_FAILS=2 \
